backend transaction list by id endpoint